# rag-agent-med-hoot

./: .gitignore
apps/functions/: eda.py  feature_eng.py
apps/pipeline/: fifa-v0.py  fifa-v1.py  fifa-v2.py
apps/read-pdf-env/: jupyter.ipynb  pyproject.toml
apps/read-pdf-env/docs/: rename_strip_spaces.sh
apps/read-pdf-env/src/: read_with_docling.py
apps/tools/: README.md  requirements.txt
apps/tools/artifacts/: iris_rf.joblib  iris_rf.joblib.meta.json
apps/tools/ds_framework/: __init__.py
apps/tools/ds_framework/eda/: __init__.py  correlation.py  descriptive.py  outliers.py
apps/tools/ds_framework/models/: __init__.py  persistence.py  trainer.py  tuning.py
apps/tools/ds_framework/preprocessing/: __init__.py  features.py  naming.py
apps/tools/ds_framework/utils/: __init__.py  display.py
apps/tools/examples/: demo_workflow.py
k8s/: .helmignore  test.yaml
k8s/argocd/: kfp.yaml  mongodb-app.yaml  psqlvector.yaml  qdrant-app.yaml  vllm.yaml
k8s/helm/pedi-hoot/: Chart.yaml  values.yaml
k8s/helm/pedi-hoot/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
k8s/helm/rag/: values.yaml
k8s/helm/rag/templates/: NOTES.txt  deployment.yaml  ingress.yaml
k8s/infra/kfp/: s3-secret.yaml  server.yaml
k8s/infra/mongodb/: db-secret.yaml  mongodb.yaml  scc.yaml
k8s/infra/psqlvector/: deploy.yaml  pvc.yaml  secret.yaml  service.yaml
k8s/infra/qdrant/: 01-rbac-anyuid.yaml  02-route.yaml
k8s/infra/vllm/: deployment.yaml  pvc.yaml  route.yaml  service.yaml
(+1 files in other folders)
