[project]
name = "read-pdf-env"
version = "0.1.0"
description = ""
authors = [
    {name = "Carlos",email = "carlos@email.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "docling (>=2.82.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "read_pdf_env", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
